--- a/views/experiment.erb
+++ b/views/experiment.erb
@@ -1,2 +1,4 @@
+<%= link_tag :to => '/experiments', :name => 'back' %>
+
 <h1><%= @experiment.name %></h1>
 <p><%= @experiment.description || 'no description' %></p>
