login button shows user id

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,7 +18,16 @@
             <li><a href="/">Home</a></li>
             <li><a href="/experiments">Experiments</a></li>
             <li><a href="/users">Users</a></li>
-          <ul>
+          </ul>
+          
+          <ul class="nav secondary-nav">
+            <% if !session[:user_id] %>
+              <li><a href="/session/new">Login</a></li>
+            <% else %>
+              <li><a href="/session"><%= session[:user_id] %></a></li>
+            <% end %>
+          </ul>
+            
         </div>
       </div>
     </div>
@@ -41,6 +50,7 @@
         <% session[:flash], session[:error] = nil, nil %>
         <% end %>
       </div>
+      
       <div class="row">
         <div class="span16">
           <%= yield %>
