--- a/views/experiments.erb
+++ b/views/experiments.erb
@@ -1,4 +1,11 @@
 
+<div class="row">
+  <div class="span16">
+  <%= link_tag to: '/experiment/new', name: 'Create Experiment', class: 'btn' %>
+  </div>
+  <hr>
+</div>
+
 <ul>
 <% @experiments.each do |experiment| %>
 
