highlights active page

--- a/views/top_bar.erb
+++ b/views/top_bar.erb
@@ -6,15 +6,17 @@
         Experiments
       </div>
       
-      <ul class="nav">            
-        <li><a href="/">Home</a></li>
-        <li><a href="/experiments">Experiments</a></li>
-        <li><a href="/users">Users</a></li>
+      <% path = request.path_info.split('/')[1] %>
+
+      <ul class="nav">
+        <li class="<%= 'active ' if path.nil? %>"><a href="/">Home</a></li>
+        <li class="<%= 'active' if path =~ /^experiment/ %>"><a href="/experiments">Experiments</a></li>
+        <li class="<%= 'active' if path =~ /^user/ %>"><a href="/users">Users</a></li>
       </ul>
       
       <ul class="nav secondary-nav">
         <% if !session[:user_id] %>
-          <li><a href="/session/new">Login</a></li>
+          <li class="<%= 'active' if path =~ /^session/%>"><a href="/session/new">Login</a></li>
         <% else %>
           <li><a href="/session"><%= session[:user_id] %></a></li>
         <% end %>
