--- a/views/users.erb
+++ b/views/users.erb
@@ -1,4 +1,12 @@
+<div class="page-header">
+  <h1>Users</h1>
+</div>
+
 <ul>
+  <% if @users.length == 0 %>
+    <p>There are no users! <%= link_tag(:to => '/user/new', :name => 'create one!')%></p>
+  <% end %>
+  
   <% @users.each do |user| %>
   
     <li><%= user.id %> - <%= link_tag(:to=>"/user/#{user.id}", :name =>'view') %>
