something is odd with bootstrap

--- a/views/experiment_new.erb
+++ b/views/experiment_new.erb
@@ -1,6 +1,10 @@
-<form>
+<div class="page-header">
+  <h1>New Experiment</h1>
+</div>
+
+<form class="formbox">
   <fieldset>
-    <legend>Create a new experiment</legend>
+    <legend>Information</legend>
     <div class="clearfix">
       <label for="name">Name</label>
       <div class="input">
