--- a/views/experiments.erb
+++ b/views/experiments.erb
@@ -1,4 +1,6 @@
-
+<div class="page-header">
+  <h1>Experiments</h1>
+</div>
 <div class="row">
   <div class="span16">
   <%= link_tag to: '/experiment/new', name: 'Create Experiment', class: 'btn' %>
