--- a/views/home.erb
+++ b/views/home.erb
@@ -1,3 +1,11 @@
+
+<div class="row">
+  <div class="hero-unit">
+    <h1>Sequences</h1>
+    <p>This site is meant to hold our high-throughput sequence data in a manner that is easy to use and secure</p>
+  </div>
+</div>
+
 <div class="page-header">
   <h1>Recent Updates</h1>
 </div>
