prettier cookie inspection :)

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,9 +20,16 @@
       
     </div><!-- container -->
     
-    <footer>
-      <%= session.inspect %>
-    </footer>
     
+      
+    <footer>
+      <div class="row">
+        <div class="span10 offset4">
+        <pre>
+        <%= session.inspect %>
+        </pre>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
