Fixed logging in problem, in session_new.erb

--- a/views/session_new.erb
+++ b/views/session_new.erb
@@ -7,7 +7,7 @@
         <div class="clearfix">
           <label for="email">E-Mail:</label>
           <div class="input">
-            <input type="text" name="username"/>
+            <input type="text" name="email"/>
           </div>
         </div>
         
