--- a/views/experiment_new.erb
+++ b/views/experiment_new.erb
@@ -2,14 +2,25 @@
   <h1>New Experiment</h1>
 </div>
 
-<form class="formbox">
-  <fieldset>
-    <legend>Information</legend>
-    <div class="clearfix">
-      <label for="name">Name</label>
-      <div class="input">
-        <input class="xlarge" name="name" id="name" type="text"/>
+<div class="row">
+  <div class="span8 offset4">
+    
+    <form action="/experiment/new" method="post">
+      <fieldset>
+        <legend>Information</legend>
+        <div class="clearfix">
+          <label for="name">Name</label>
+          <div class="input">
+            <input class="xlarge" name="name" id="name" type="text"/>
+          </div>
+        </div><!-- /clearfix -->
+      </fieldset>
+      
+      <div class="actions">
+        <input type="submit" value="Save" class="btn primary"/>
+        <a class="btn" onclick="history.go(-1)">Cancel</a>
       </div>
-    </div><!-- /clearfix -->
-  </fieldset>
-</form>
+    </form>
+    
+  </div>
+</div>
