--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,8 +1,8 @@
 <html>
   <head>
     <title>Experiment Site</title>
-    <link rel="stylesheet" href="/stylesheets/bootstrap.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="/stylesheets/style.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="/stylesheets/bootstrap.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="/stylesheets/style.css" type="text/css" media="screen" />
   </head>
   <body>
     
@@ -20,16 +20,15 @@
       
     </div><!-- container -->
     
-    
-      
     <footer>
       <div class="row">
         <div class="span10 offset4">
         <pre>
-        <%= session.inspect %>
+          <%= session.inspect %>
         </pre>
         </div>
       </div>
     </footer>
+    
   </body>
 </html>
