--- a/views/top_bar.erb
+++ b/views/top_bar.erb
@@ -3,7 +3,7 @@
     <div class="container">
       
       <div class="brand">
-        Experiments
+        Sequences
       </div>
       
       <% path = request.path_info.split('/')[1] %>
