--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Experiment Site</title>
+    <title>Sequences</title>
     <link rel="stylesheet" href="/stylesheets/bootstrap.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="/stylesheets/style.css" type="text/css" media="screen" />
   </head>
