--- a/views/user.erb
+++ b/views/user.erb
@@ -1,4 +1,5 @@
 <% if @user %>
+  <a href="http://www.gravatar.com/emails"><img class="thumbnail" src="http://www.gravatar.com/avatar/<%= Digest::MD5.hexdigest(@user.email) %>"></a>
 	<h2><%= @user.name %></h2>
 	<%= link_tag to: "mailto:" + @user.email, name: @user.email %>
 	
