--- a/views/users.erb
+++ b/views/users.erb
@@ -1,43 +1,50 @@
 <div class="page-header">
   <h1>Users</h1>
 </div>
-
-  <% if @users.length == 0 %>
-    <p>There are no users! <%= link_tag(:to => '/user/new', :name => 'create one!')%></p>
-  <% end %>
+<div class="row">
+  <div class="span16">
+    <% if @users.length == 0 %>
+      <p>There are no users! <%= link_tag(:to => '/user/new', :name => 'create one!')%></p>
+    <% end %>
+  </div>
+</div>
   
-  <table class="bordered-table zebra-striped">
-    <thead>
-      <tr>
-        <th><!-- icon--></th>
-        <th>
-          ID
-        </td>
-        <th>
-          Name
-        </th>
-        <th>
-          E-Mail
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @users.each do |user| %>
+<div class="row">  
+  <div class="span16">  
+    <table class="bordered-table zebra-striped">
+      <thead>
         <tr>
-          <td>
-            <img src="<%= gravatar(:email => user[:email], :size => 20) %>">
-          </td>
-          <td>
-            <%= user.id %>
-          </td>
-          <td>
-            <%= link_tag(:to=>"/user/#{user.id}", :name => user.name) %>
-          </td>
-          <td>
-            <%= link_tag(:to=>"mailto:#{user.email}", :name => user.email) %>
+          <th><!-- icon--></th>
+          <th>
+            Name
+          </th>
+          <th>
+            E-Mail
+          </th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+        <% @users.each do |user| %>
+          <tr>
+            <td>
+              <img src="<%= gravatar(:email => user[:email], :size => 20) %>">
+            </td>
+            <td>
+              <%= link_tag(:to=>"/user/#{user.id}", :name => user.name) %>
+            </td>
+            <td>
+              <%= link_tag(:to=>"mailto:#{user.email}", :name => user.email) %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 
-<%= link_tag(:to => '/user/new', :name => 'Register')%>
+<div class="row">
+  <div class="span16">
+    <div class="actions">
+      <a href="/user/new" class="btn">Register</a>
+    </div>
+  </div>
+</div>
