--- a/views/experiment_new.erb
+++ b/views/experiment_new.erb
@@ -13,7 +13,16 @@
           <div class="input">
             <input class="xlarge" name="name" id="name" type="text"/>
           </div>
-        </div><!-- /clearfix -->
+        </div>
+        
+        <div class="clearfix">
+          <label for="description">Description</label>
+          <div class="input">
+            <textarea class="xlarge" id="textarea" rows="10"></textarea>
+            <span class="help-inline">Describe the experiment (Optional)</span>
+          </div>
+        </div>
+        
       </fieldset>
       
       <div class="actions">
