fixed textarea name

--- a/views/experiment_new.erb
+++ b/views/experiment_new.erb
@@ -18,7 +18,7 @@
         <div class="clearfix">
           <label for="description">Description</label>
           <div class="input">
-            <textarea class="xlarge" id="textarea" rows="10"></textarea>
+            <textarea class="xlarge" name="description" rows="10"></textarea>
             <span class="help-inline">Describe the experiment (Optional)</span>
           </div>
         </div>
