fixed missing closing tag

--- a/views/session_new.erb
+++ b/views/session_new.erb
@@ -12,7 +12,7 @@
         </div>
         
         <div class="clearfix">
-          <label for="password">Password
+          <label for="password">Password</label>
           <div class="input">
             <input type="password" name="password"/>
           </div>
