made look consistent

--- a/views/upload.erb
+++ b/views/upload.erb
@@ -1,5 +1,13 @@
-<h2>upload</h2>
+<div class="page-header">
+  <h1>
+    Upload
+  </h1>
+</div>
 <form action="/upload" method="post" enctype="multipart/form-data">
-  <input type="file" name="file">
-  <input type="submit" value= "Upload">
+  <div class="clearfix">
+    <input type="file" name="file">
+  </div>
+  <div class="clearfix">
+    <input type="submit" value= "Upload" class="btn success">
+  </div>
 </form>
