--- a/views/user.erb
+++ b/views/user.erb
@@ -1,19 +1,26 @@
 <% if @user %>
-  <div class="page-title">
+  <div class="page-header">
   	<h1><%= @user.name %></h1>
   </div>
   
   <div class="row">
     <div class="span16">
-      <a href="http://gravatar.com/emails"><img src="<%= gravatar(:email => @user[:email], :size => 100) %>"></a>
+      
+      <p><a href="http://gravatar.com/emails"><img src="<%= gravatar(:email => @user[:email], :size => 100) %>"></a></p>
+      <p><%= link_tag to: "mailto:" + @user.email, name: @user.email %></p>
+
+      <hr/>
+
+      <h2>Experiments:</h2>
+      <%= "#{@user.name} has not created any experiments." if @user.experiments.length == 0 %>
+      <ul>
+        <% @user.experiments.each do |experiment| %>
+          <li><a href="/experiment/<%= experiment.id %>"><%= experiment.name %></a></li>
+        <% end %>
+      </ul>
+
     </div>
-  </div>
-  
-  <div class="row">
-    <div class="span16">
-    	<%= link_tag to: "mailto:" + @user.email, name: @user.email %>
-    </div>
-  </div>
+  </div>    
 <% else %>
   <div class="row">
     <div class="span16">
@@ -21,18 +28,3 @@
     </div>
   </div>
 <% end %>
-
-<hr/>
-
-<div class="row">
-  <div class="span16">
-    <h2>Experiments:</h2>
-
-    <%= "#{@user.name} has not created any experiments." if @user.experiments.length == 0 %>
-    <ul>
-      <% @user.experiments.each do |experiment| %>
-        <li><a href="/experiment/<%= experiment.id %>"><%= experiment.name %></a></li>
-      <% end %>
-    </ul>
-  </div>
-</div>
