--- a/views/user.erb
+++ b/views/user.erb
@@ -1,20 +1,20 @@
-<% if @user %>
+<% if @view_user %>
   <div class="page-header">
-  	<h1><%= @user.name %></h1>
+  	<h1><%= @view_user.name %></h1>
   </div>
   
   <div class="row">
     <div class="span16">
       
-      <p><a href="http://gravatar.com/emails"><img src="<%= gravatar(:email => @user[:email], :size => 100) %>"></a></p>
-      <p><%= link_tag to: "mailto:" + @user.email, name: @user.email %></p>
+      <p><a href="http://gravatar.com/emails"><img src="<%= gravatar(:email => @view_user[:email], :size => 100) %>"></a></p>
+      <p><%= link_tag to: "mailto:" + @view_user.email, name: @view_user.email %></p>
 
       <hr/>
 
       <h2>Experiments:</h2>
-      <%= "#{@user.name} has not created any experiments." if @user.experiments.length == 0 %>
+      <%= "#{@view_user.name} has not created any experiments." if @view_user.experiments.length == 0 %>
       <ul>
-        <% @user.experiments.each do |experiment| %>
+        <% @view_user.experiments.each do |experiment| %>
           <li><a href="/experiment/<%= experiment.id %>"><%= experiment.name %></a></li>
         <% end %>
       </ul>
