--- a/bootstrap/bootstrap.css
+++ b/bootstrap/bootstrap.css
@@ -1401,12 +1401,12 @@ table .headerSortUp.purple, table .headerSortDown.purple {
   background-color: #0378a9;
   background-color: #025577;
   background-repeat: repeat-x;
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#0378a9), to(#025577));
-  background-image: -moz-linear-gradient(top, #0378a9, #025577);
-  background-image: -ms-linear-gradient(top, #0378a9, #025577);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0378a9), color-stop(100%, #025577));
-  background-image: -webkit-linear-gradient(top, #0378a9, #025577);
-  background-image: -o-linear-gradient(top, #0378a9, #025577);
+  background-image: url('/images/noise.png'); -khtml-gradient(linear, left top, left bottom, from(#0378a9), to(#025577));
+  background-image: url('/images/noise.png'), -moz-linear-gradient(top, #0378a9, #025577);
+  background-image: url('/images/noise.png'), -ms-linear-gradient(top, #0378a9, #025577);
+  background-image: url('/images/noise.png'), -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0378a9), color-stop(100%, #025577));
+  background-image: url('/images/noise.png'), -webkit-linear-gradient(top, #0378a9, #025577);
+  background-image: url('/images/noise.png'), -o-linear-gradient(top, #0378a9, #025577);
   background-image: linear-gradient(top, #0378a9, #025577);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0378a9', endColorstr='#025577', GradientType=0);
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
