--- a/views/users.erb
+++ b/views/users.erb
@@ -44,7 +44,7 @@
 <div class="row">
   <div class="span16">
     <div class="actions">
-      <a href="/user/new" class="btn">Register</a>
+      <a href="/user/new" class="btn">Add User</a>
     </div>
   </div>
 </div>
