Added edit experiment button

--- a/views/experiment.erb
+++ b/views/experiment.erb
@@ -29,6 +29,7 @@
       
       <% if session[:user_id] %>
         <%= link_tag :to => "/experiment/#{@experiment.id}/delete", :name => 'Delete', :class => 'btn danger' %>
+        <%= link_tag :to => "/experiment/#{@experiment.id}/edit", :name => 'Edit', :class => 'btn danger' %>
       <% end %>
 
     </div>
