--- a/bootstrap/bootstrap.css
+++ b/bootstrap/bootstrap.css
@@ -6,7 +6,7 @@
  * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
- * Date: Tue Jan 17 16:27:27 EST 2012
+ * Date: Wed Jan 18 16:09:21 EST 2012
  */
 /* Reset.less
  * Props to Eric Meyer (meyerweb.com) for his CSS reset file. We're using an adapted version here	that cuts out some of the reset HTML elements we will never need here (i.e., dfn, samp, etc).
@@ -1401,13 +1401,13 @@ table .headerSortUp.purple, table .headerSortDown.purple {
   background-color: #0378a9;
   background-color: #025577;
   background-repeat: repeat-x;
-  background-image: url('/images/noise.png'); -khtml-gradient(linear, left top, left bottom, from(#0378a9), to(#025577));
-  background-image: url('/images/noise.png'), -moz-linear-gradient(top, #0378a9, #025577);
-  background-image: url('/images/noise.png'), -ms-linear-gradient(top, #0378a9, #025577);
-  background-image: url('/images/noise.png'), -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0378a9), color-stop(100%, #025577));
-  background-image: url('/images/noise.png'), -webkit-linear-gradient(top, #0378a9, #025577);
-  background-image: url('/images/noise.png'), -o-linear-gradient(top, #0378a9, #025577);
-  background-image: linear-gradient(top, #0378a9, #025577);
+  background-image: '', -khtml-gradient(linear, left top, left bottom, from(#0378a9), to(#025577));
+  background-image: '', -moz-linear-gradient(top, #0378a9, #025577);
+  background-image: '', -ms-linear-gradient(top, #0378a9, #025577);
+  background-image: '', -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0378a9), color-stop(100%, #025577));
+  background-image: '', -webkit-linear-gradient(top, #0378a9, #025577);
+  background-image: '', -o-linear-gradient(top, #0378a9, #025577);
+  background-image: '', linear-gradient(top, #0378a9, #025577);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0378a9', endColorstr='#025577', GradientType=0);
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
@@ -1502,13 +1502,13 @@ table .headerSortUp.purple, table .headerSortDown.purple {
 .nav .dropdown-menu li a:hover {
   background-color: #191919;
   background-repeat: repeat-x;
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#292929), to(#191919));
-  background-image: -moz-linear-gradient(top, #292929, #191919);
-  background-image: -ms-linear-gradient(top, #292929, #191919);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #292929), color-stop(100%, #191919));
-  background-image: -webkit-linear-gradient(top, #292929, #191919);
-  background-image: -o-linear-gradient(top, #292929, #191919);
-  background-image: linear-gradient(top, #292929, #191919);
+  background-image: '', -khtml-gradient(linear, left top, left bottom, from(#292929), to(#191919));
+  background-image: '', -moz-linear-gradient(top, #292929, #191919);
+  background-image: '', -ms-linear-gradient(top, #292929, #191919);
+  background-image: '', -webkit-gradient(linear, left top, left bottom, color-stop(0%, #292929), color-stop(100%, #191919));
+  background-image: '', -webkit-linear-gradient(top, #292929, #191919);
+  background-image: '', -o-linear-gradient(top, #292929, #191919);
+  background-image: '', linear-gradient(top, #292929, #191919);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#292929', endColorstr='#191919', GradientType=0);
   color: #ffffff;
 }
@@ -1603,13 +1603,13 @@ a.menu:after, .dropdown-toggle:after {
 .dropdown-menu a.hover {
   background-color: #dddddd;
   background-repeat: repeat-x;
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#eeeeee), to(#dddddd));
-  background-image: -moz-linear-gradient(top, #eeeeee, #dddddd);
-  background-image: -ms-linear-gradient(top, #eeeeee, #dddddd);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eeeeee), color-stop(100%, #dddddd));
-  background-image: -webkit-linear-gradient(top, #eeeeee, #dddddd);
-  background-image: -o-linear-gradient(top, #eeeeee, #dddddd);
-  background-image: linear-gradient(top, #eeeeee, #dddddd);
+  background-image: '', -khtml-gradient(linear, left top, left bottom, from(#eeeeee), to(#dddddd));
+  background-image: '', -moz-linear-gradient(top, #eeeeee, #dddddd);
+  background-image: '', -ms-linear-gradient(top, #eeeeee, #dddddd);
+  background-image: '', -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eeeeee), color-stop(100%, #dddddd));
+  background-image: '', -webkit-linear-gradient(top, #eeeeee, #dddddd);
+  background-image: '', -o-linear-gradient(top, #eeeeee, #dddddd);
+  background-image: '', linear-gradient(top, #eeeeee, #dddddd);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#dddddd', GradientType=0);
   color: #404040;
   text-decoration: none;
@@ -1739,13 +1739,13 @@ a.menu:after, .dropdown-toggle:after {
   margin: 0 0 18px;
   background-color: #f5f5f5;
   background-repeat: repeat-x;
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#ffffff), to(#f5f5f5));
-  background-image: -moz-linear-gradient(top, #ffffff, #f5f5f5);
-  background-image: -ms-linear-gradient(top, #ffffff, #f5f5f5);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #f5f5f5));
-  background-image: -webkit-linear-gradient(top, #ffffff, #f5f5f5);
-  background-image: -o-linear-gradient(top, #ffffff, #f5f5f5);
-  background-image: linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: '', -khtml-gradient(linear, left top, left bottom, from(#ffffff), to(#f5f5f5));
+  background-image: '', -moz-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: '', -ms-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: '', -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #f5f5f5));
+  background-image: '', -webkit-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: '', -o-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: '', linear-gradient(top, #ffffff, #f5f5f5);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f5f5f5', GradientType=0);
   border: 1px solid #ddd;
   -webkit-border-radius: 3px;
@@ -1828,13 +1828,13 @@ footer {
 .alert-message.error {
   background-color: #c43c35;
   background-repeat: repeat-x;
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#ee5f5b), to(#c43c35));
-  background-image: -moz-linear-gradient(top, #ee5f5b, #c43c35);
-  background-image: -ms-linear-gradient(top, #ee5f5b, #c43c35);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ee5f5b), color-stop(100%, #c43c35));
-  background-image: -webkit-linear-gradient(top, #ee5f5b, #c43c35);
-  background-image: -o-linear-gradient(top, #ee5f5b, #c43c35);
-  background-image: linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: '', -khtml-gradient(linear, left top, left bottom, from(#ee5f5b), to(#c43c35));
+  background-image: '', -moz-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: '', -ms-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: '', -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ee5f5b), color-stop(100%, #c43c35));
+  background-image: '', -webkit-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: '', -o-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: '', linear-gradient(top, #ee5f5b, #c43c35);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ee5f5b', endColorstr='#c43c35', GradientType=0);
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #c43c35 #c43c35 #882a25;
@@ -1843,13 +1843,13 @@ footer {
 .btn.success, .alert-message.success {
   background-color: #57a957;
   background-repeat: repeat-x;
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#62c462), to(#57a957));
-  background-image: -moz-linear-gradient(top, #62c462, #57a957);
-  background-image: -ms-linear-gradient(top, #62c462, #57a957);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #62c462), color-stop(100%, #57a957));
-  background-image: -webkit-linear-gradient(top, #62c462, #57a957);
-  background-image: -o-linear-gradient(top, #62c462, #57a957);
-  background-image: linear-gradient(top, #62c462, #57a957);
+  background-image: '', -khtml-gradient(linear, left top, left bottom, from(#62c462), to(#57a957));
+  background-image: '', -moz-linear-gradient(top, #62c462, #57a957);
+  background-image: '', -ms-linear-gradient(top, #62c462, #57a957);
+  background-image: '', -webkit-gradient(linear, left top, left bottom, color-stop(0%, #62c462), color-stop(100%, #57a957));
+  background-image: '', -webkit-linear-gradient(top, #62c462, #57a957);
+  background-image: '', -o-linear-gradient(top, #62c462, #57a957);
+  background-image: '', linear-gradient(top, #62c462, #57a957);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#62c462', endColorstr='#57a957', GradientType=0);
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #57a957 #57a957 #3d773d;
@@ -1858,13 +1858,13 @@ footer {
 .btn.info, .alert-message.info {
   background-color: #339bb9;
   background-repeat: repeat-x;
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#5bc0de), to(#339bb9));
-  background-image: -moz-linear-gradient(top, #5bc0de, #339bb9);
-  background-image: -ms-linear-gradient(top, #5bc0de, #339bb9);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #5bc0de), color-stop(100%, #339bb9));
-  background-image: -webkit-linear-gradient(top, #5bc0de, #339bb9);
-  background-image: -o-linear-gradient(top, #5bc0de, #339bb9);
-  background-image: linear-gradient(top, #5bc0de, #339bb9);
+  background-image: '', -khtml-gradient(linear, left top, left bottom, from(#5bc0de), to(#339bb9));
+  background-image: '', -moz-linear-gradient(top, #5bc0de, #339bb9);
+  background-image: '', -ms-linear-gradient(top, #5bc0de, #339bb9);
+  background-image: '', -webkit-gradient(linear, left top, left bottom, color-stop(0%, #5bc0de), color-stop(100%, #339bb9));
+  background-image: '', -webkit-linear-gradient(top, #5bc0de, #339bb9);
+  background-image: '', -o-linear-gradient(top, #5bc0de, #339bb9);
+  background-image: '', linear-gradient(top, #5bc0de, #339bb9);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5bc0de', endColorstr='#339bb9', GradientType=0);
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #339bb9 #339bb9 #22697d;
@@ -1913,13 +1913,13 @@ footer {
   color: #ffffff;
   background-color: #0064cd;
   background-repeat: repeat-x;
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#049cdb), to(#0064cd));
-  background-image: -moz-linear-gradient(top, #049cdb, #0064cd);
-  background-image: -ms-linear-gradient(top, #049cdb, #0064cd);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #049cdb), color-stop(100%, #0064cd));
-  background-image: -webkit-linear-gradient(top, #049cdb, #0064cd);
-  background-image: -o-linear-gradient(top, #049cdb, #0064cd);
-  background-image: linear-gradient(top, #049cdb, #0064cd);
+  background-image: '', -khtml-gradient(linear, left top, left bottom, from(#049cdb), to(#0064cd));
+  background-image: '', -moz-linear-gradient(top, #049cdb, #0064cd);
+  background-image: '', -ms-linear-gradient(top, #049cdb, #0064cd);
+  background-image: '', -webkit-gradient(linear, left top, left bottom, color-stop(0%, #049cdb), color-stop(100%, #0064cd));
+  background-image: '', -webkit-linear-gradient(top, #049cdb, #0064cd);
+  background-image: '', -o-linear-gradient(top, #049cdb, #0064cd);
+  background-image: '', linear-gradient(top, #049cdb, #0064cd);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#049cdb', endColorstr='#0064cd', GradientType=0);
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #0064cd #0064cd #003f81;
@@ -2000,13 +2000,13 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   color: #404040;
   background-color: #eedc94;
   background-repeat: repeat-x;
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#fceec1), to(#eedc94));
-  background-image: -moz-linear-gradient(top, #fceec1, #eedc94);
-  background-image: -ms-linear-gradient(top, #fceec1, #eedc94);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fceec1), color-stop(100%, #eedc94));
-  background-image: -webkit-linear-gradient(top, #fceec1, #eedc94);
-  background-image: -o-linear-gradient(top, #fceec1, #eedc94);
-  background-image: linear-gradient(top, #fceec1, #eedc94);
+  background-image: '', -khtml-gradient(linear, left top, left bottom, from(#fceec1), to(#eedc94));
+  background-image: '', -moz-linear-gradient(top, #fceec1, #eedc94);
+  background-image: '', -ms-linear-gradient(top, #fceec1, #eedc94);
+  background-image: '', -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fceec1), color-stop(100%, #eedc94));
+  background-image: '', -webkit-linear-gradient(top, #fceec1, #eedc94);
+  background-image: '', -o-linear-gradient(top, #fceec1, #eedc94);
+  background-image: '', linear-gradient(top, #fceec1, #eedc94);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fceec1', endColorstr='#eedc94', GradientType=0);
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #eedc94 #eedc94 #e4c652;
