--- a/bootstrap/bootstrap.css
+++ b/bootstrap/bootstrap.css
@@ -6,7 +6,7 @@
  * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
- * Date: Wed Jan 18 16:09:21 EST 2012
+ * Date: Wed Jan 18 16:15:51 EST 2012
  */
 /* Reset.less
  * Props to Eric Meyer (meyerweb.com) for his CSS reset file. We're using an adapted version here	that cuts out some of the reset HTML elements we will never need here (i.e., dfn, samp, etc).
@@ -1401,13 +1401,13 @@ table .headerSortUp.purple, table .headerSortDown.purple {
   background-color: #0378a9;
   background-color: #025577;
   background-repeat: repeat-x;
-  background-image: '', -khtml-gradient(linear, left top, left bottom, from(#0378a9), to(#025577));
-  background-image: '', -moz-linear-gradient(top, #0378a9, #025577);
-  background-image: '', -ms-linear-gradient(top, #0378a9, #025577);
-  background-image: '', -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0378a9), color-stop(100%, #025577));
-  background-image: '', -webkit-linear-gradient(top, #0378a9, #025577);
-  background-image: '', -o-linear-gradient(top, #0378a9, #025577);
-  background-image: '', linear-gradient(top, #0378a9, #025577);
+  background-image: url('/images/noise.png'), -khtml-gradient(linear, left top, left bottom, from(#0378a9), to(#025577));
+  background-image: url('/images/noise.png'), -moz-linear-gradient(top, #0378a9, #025577);
+  background-image: url('/images/noise.png'), -ms-linear-gradient(top, #0378a9, #025577);
+  background-image: url('/images/noise.png'), -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0378a9), color-stop(100%, #025577));
+  background-image: url('/images/noise.png'), -webkit-linear-gradient(top, #0378a9, #025577);
+  background-image: url('/images/noise.png'), -o-linear-gradient(top, #0378a9, #025577);
+  background-image: url('/images/noise.png'), linear-gradient(top, #0378a9, #025577);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0378a9', endColorstr='#025577', GradientType=0);
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
