--- a/bootstrap/lib/patterns.less
+++ b/bootstrap/lib/patterns.less
@@ -116,7 +116,7 @@
 .topbar-inner,
 .topbar .fill {
   background-color: @topbar;
-  #gradient > .vertical(@topbar, @topbarDark, url('/images/noise.png'));
+  #gradient_img > .vertical(@topbar, @topbarDark, url('/images/noise.png'));
   @shadow: 0 1px 3px rgba(0,0,0,.25), inset 0 -1px 0 rgba(0,0,0,.1);
   .box-shadow(@shadow);
 }
